# WebShare-Connect

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Doxyfile WebShare-Connect  LICENSE  README.md  Webshare.cfg  main.c  requirements.txt  requirementsLinux(Pacman).txt  requirementsLinux(Ubuntu).txt  requirementsWindows.txt  vcpkg.json
.github/workflows/: advanced-ci.yml  ci.yml  cmake-multi-platform.yml  cmake-multi-platform1.yml  cmake-single-platform.yml  optimized-ci.yml
WebShare-Connect/: CMakeLists.txt  WebShare-Connect.c  WebShare-Connect.h  client.c  client.h  receiver.c  receiver.h  removeQuotes.c  removeQuotes.h  sender.c  sender.h  server.c  server.h  sha512.c  sha512.h  terminalProgressBar.c  terminalProgressBar.h  testfile.txt  workerQueue.h
WebShare-Connect/APP/: CMakeLists.txt
WebShare-Connect/CLI/: CMakeLists.txt  WebShare-Connect.c  terminalProgressBar.h
WebShare-Connect/Core/: CMakeLists.txt  receiver.c  receiver.h  removeQuotes.c  removeQuotes.h  sender.c  sender.h  sha512.c  sha512.h
WebShare-Connect/GUI/: CMakeLists.txt
WebShare-Connect/Include/: common.h  fileChunks.c  fileChunks.h
WebShare-Connect/Include/lib/: pthreadVC3.lib
cmake/Modules/: FindLibNice.cmake
core/: CMakeLists.txt  allocatecopystring.c  allocatecopystring.h  core.c  core.h  cthreads.c  errorcodes.h  jobqueue.c  jobqueue.h  tasks.h  variables.c  variables.h  version.h.in  workerpool.c  workerpool.h
gui/: CMakeLists.txt  iconutils.cpp  iconutils.h  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
gui/themes/: default.qss
tests/: CMakeLists.txt  test_cli_options.c  test_job_queue.c  test_job_queue_comprehensive.c
wsc/: CMakeLists.txt  argumentvalueamount.h  handlearguments.c  handlearguments.h  main.c  options.c  options.h
